[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uncorrelated"
version = "0.1.0"
description = "Build uncorrelated-return portfolios: correlation clustering + inverse-vol + risk parity."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Andrea Montana" }]
keywords = ["portfolio", "risk-parity", "diversification", "quant", "clustering", "finance"]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
live = ["yfinance>=0.2"]
dev = ["pytest>=7.4"]

[project.scripts]
uncorrelated = "uncorrelated.cli:main"

[tool.setuptools.packages.find]
include = ["uncorrelated*"]
